# apg-pycis

./: .gitignore  LICENSE  MANIFEST.in  README.md  colors_tests.py  pycis.py  pyproject.toml  requirements.txt  setup.py  test_prompt.py
common/: prompt_passw.py  run.py  validation.py
data/reference/: hudson_config.xml  jenkins_config.xml
jfuturbr/: __init__.py  command_line.py  config_template.ini  jfuturebr_funcs.py  prompt.py
scripts/build_all/: __init__ .py  command_line.py
scripts/jviewcopy/: command_line.py  rsync_excludes.txt
scripts/jviewscan/: command_line.py
scripts/rdircopy/: rsync_excludes.template.txt
src/build_all/: __init__ .py  command_line.py
src/common/: run.py
src/jviewcopy/: command_line.py  rsync_excludes.txt
src/jviewscan/: command_line.py
src/rdircopy/: __init__.py  command_line.py
